# gibbs-lda

./: .gitignore  CMakeLists.txt  README  README.md
include/: dataset.h  lda.hpp  model.h  utils.h
src/: constants.h  dataset.cpp  dataset.h  lda.cpp  ldainfer.cpp  model.cpp  model.h  strtokenizer.cpp  strtokenizer.h  utils.cpp  utils.h
